Lógica adicionar ao marcar ponto para impedir que o usuário marque mais de uma entrada no mesmo perído